# MemoryManager

./: .gitignore  Doxyfile
3/: CMakeLists.txt  LICENSE  README.md
3/Benchmark/: CMakeLists.txt
3/Benchmark/source/: Benchmark.cpp
3/HashTable/: CMakeLists.txt
3/MVP/: CMakeLists.txt
3/MVP/include/MVP/: Presenter.hpp  View.hpp
3/MVP/source/: Presenter.cpp  View.cpp
3/Main/: CMakeLists.txt
3/Main/source/: main.cpp
3/Memory/: CMakeLists.txt
3/Memory/include/Memory/: ArrayDescriptor.hpp  Buffer.hpp  Error.hpp  IManager.hpp  IMemoryElement.hpp  Manager.hpp  MemoryElement.hpp  Program.hpp  ReferenceDescriptor.hpp  SharedSegmentDescriptor.hpp  VariableDescriptor.hpp
3/Memory/source/: ArrayDescriptor.cpp  Error.cpp  MemoryElement.cpp  Program.cpp  ReferenceDescriptor.cpp  SharedSegmentDescriptor.cpp  VariableDescriptor.cpp
3/Tests/: CMakeLists.txt
3/Tests/source/: TestBuffer.cpp  TestManager.cpp  TestMemoryElement.cpp  TestProgram.cpp  TestSharedSegment.cpp
MVP/: CMakeLists.txt
MVP/source/: Presenter.cpp
Main/source/: main.cpp
Memory/: CMakeLists.txt
Memory/include/Memory/: Error.hpp  IMemoryElement.hpp  Manager.hpp  VariableDescriptor.hpp
Memory/source/: MemoryElement.cpp  ReferenceDescriptor.cpp  VariableDescriptor.cpp
Tests/source/: TestError.cpp
